--- a/core/assets/lang/de_de.json
+++ b/core/assets/lang/de_de.json
@@ -4,5 +4,10 @@
   "screen.main_menu.load": "Spielstand laden",
   "screen.main_menu.exit": "Spiel verlassen",
   "screen.main_menu.start_info": "Drücke %s um das Spiel zu starten",
-  "screen.main_menu.exit_info": "Drücke %s + %s um das Spiel zu verlassen"
+  "screen.main_menu.exit_info": "Drücke %s + %s um das Spiel zu verlassen",
+  "screen.load_saves.start": "Spiel starten",
+  "screen.load_saves.back": "Zurück zum Hauptmenü",
+  "screen.load_saves.creation_date": "Erstelldatum: %s",
+  "screen.load_saves.playtime": "Gesamtspielzeit: %s",
+  "screen.load_saves.no_saves": "Keine Spielstände gefunden!"
 }
